--- a/style.css
+++ b/style.css
@@ -1,3 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+
+
 body{
-    background-color: #000;
+    margin:0;
+    padding:0;
+    background-color:  #2D25A0;
+    font-family: 'Poppins', sans-serif;
+}
+.header-area{
+    width:82%;
+    height:470px;
+    padding:100px;
+}
+.left-right{
+    width:95%;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+}
+.left-right>div{
+    padding-left:50px;
+}
+
+.left-head-area{
+    width: 485px;
+}
+.left-head-area>h1{
+    width:388px;
+    color:white;
+    font-weight:700;
+    font-size:50px;
+    line-height: 40px;
+}
+
+
+.left-head-area>a{
+    text-decoration:none;
+    color: white;
+    background-color:#E02C6D;
+    padding: 10px 24px;
+}
+
+.right-head-area>img{
+    width:500px;
+    height:400px;
+    padding-left:50px;
+    
+
+}
+.players-area{
+    width:100%;
+    height:340vh;
+    display:inline-block;
+    background-color:white;
+}
+.players-area>.div{
+    width:20%;
+    height:400px;
+    display:inline-block;
+}
+.players-area img{
+    width:300px;
+    height:200px;
+}
+.container{
+    display:flex;
+    justify-content:space-between;
+    align-items: center;
+    margin: 48px 210px 27px 117px;
+
+}
+.small-container{
+    width:330px;
+    height:441px;
+    padding:15px;
+    border: 1px solid white;
+    margin:0 24px 0;
+    box-shadow:5px 5px 40px rgba(0, 0, 0, 0.15); ;
 }
